--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header Section -->
 
     <header class="header">
-      <img src="/Resources/img/logo-space.png" alt="Logo" class="logo" />
+      <img src="img/logo-space.png" alt="Logo" class="logo" />
 
       <nav class="navbar">
         <a href="#" class="nav-link navbar_hover active">Home</a>
@@ -20,7 +20,7 @@
         <div class="brand_name"><h1>Celestial Brew</h1></div>
       </nav>
       <div class="burger_menu">
-        <img src="/Resources/img/img-burger-menu.png" alt="" class="burgir" />
+        <img src="img/img-burger-menu.png" alt="" class="burgir" />
       </div>
     </header>
 
@@ -78,7 +78,7 @@
       <!-- Footer Section -->
 
       <footer>
-        <img src="/Resources/img/logo-space.png" alt="Logo" class="logo" />
+        <img src="img/logo-space.png" alt="Logo" class="logo" />
         <div>| &copy; Celestial Brew</div>
       </footer>
     </div>
